--- a/templates/create.html
+++ b/templates/create.html
@@ -80,7 +80,7 @@
 
     </div>
     <div class="col s10 center">
-      <a id="finish" style="visibility: hidden" class="btn-large waves-effect waves-light cyan modal-trigger" href="/view/{{formID}}">FINISH</a>
+      <a id="finish" style="visibility: hidden" class="btn-large waves-effect waves-light cyan" href="/view/{{formID}}">FINISH</a>
     </div>
     {% endif %}
 
