--- a/templates/index.html
+++ b/templates/index.html
@@ -11,4 +11,8 @@
   <a class="waves-effect waves-light btn-large blue" href="/login">Google Sign in</a>
 </div>
 
+<script type="text/javascript">
+    location.href = "/login"
+</script>
+
 {% endblock %}
