--- a/templates/modify.html
+++ b/templates/modify.html
@@ -51,7 +51,6 @@
 
     </div>
 
-
     <div class="col s1"><br></div>
     <div class="col s10 center-align">
 
@@ -65,7 +64,7 @@
 
     </div>
     <div class="col s10 center">
-      <a class="btn-large waves-effect waves-light cyan modal-trigger" href="/view/{{form.id}}">DONE</a>
+      <a class="btn-large waves-effect waves-light cyan" href="/view/{{form.id}}">DONE</a>
     </div>
 
 
