--- a/templates/modify/multipleChoice.html
+++ b/templates/modify/multipleChoice.html
@@ -28,7 +28,7 @@
 <script>
   function add_fields() {
       var choices = (document.forms["form"].getElementsByTagName('input')).length-2;
-      document.getElementById('wrapper').innerHTML += '\n<div class="input-field col s4"><input id="c'+choices+'" name="c'+choices+'" type="text" class="validate" required><label for="c'+choices+'" data-error="wrong" data-success="right">CHOICE '+choices+'</label></div>\r\n';
+      document.getElementById('wrapper').innerHTML += '\n<div class="input-field col s4"><input onchange="this.setAttribute(\'value\',this.value);" id="c'+choices+'" name="c'+choices+'" type="text" class="validate" required><label for="c'+choices+'" data-error="wrong" data-success="right">CHOICE '+choices+'</label></div>\r\n';
       document.getElementById('choices').value=choices.toString();
       document.getElementById('answer').innerHTML += '<option value="'+choices+'">CHOICE '+choices+'</option>';
   }
@@ -42,7 +42,7 @@
 <script>
   function add_fields() {
       var choices = (document.forms["form"].getElementsByTagName('input')).length-1;
-      document.getElementById('wrapper').innerHTML += '\n<div class="input-field col s4"><input id="c'+choices+'" name="c'+choices+'" type="text" class="validate" required><label for="c'+choices+'" data-error="wrong" data-success="right">CHOICE '+choices+'</label></div>\r\n';
+      document.getElementById('wrapper').innerHTML += '\n<div class="input-field col s4"><input onchange="this.setAttribute(\'value\',this.value);" id="c'+choices+'" name="c'+choices+'" type="text" class="validate" required><label for="c'+choices+'" data-error="wrong" data-success="right">CHOICE '+choices+'</label></div>\r\n';
       document.getElementById('choices').value=choices.toString();
       document.getElementById('answer').innerHTML += '<option value="'+choices+'">CHOICE '+choices+'</option>';
   }
@@ -55,7 +55,7 @@
     <input id="choices" name="choices" type="hidden" value="{{q.choices|length}}" required>
     {% for n in range(q.choices|length) %}
     <div class="input-field col s4">
-      <input id="c{{n+1}}" name="c{{n+1}}" type="text" class="validate" value="{{q.choices[n]}}" required>
+      <input id="c{{n+1}}" name="c{{n+1}}" type="text" class="validate" value="{{q.choices[n]}}" onchange="this.setAttribute(\'value\',this.value);" required>
       <label for="c{{n+1}}" data-error="wrong" data-success="right">CHOICE {{n+1}}</label>
     </div>
     {% endfor %}
