--- a/templates/take.html
+++ b/templates/take.html
@@ -21,9 +21,6 @@
   {% endif %}
 
 {% if form.owner != user %}
-
-{% set qustionNumber = 1 %}
-
 <div class="container">
   <div class="section">
     <div class="col s10">
@@ -35,14 +32,21 @@
   <div class="col s10 center-align">
     <iframe class="center" name="iframe" id="iframe" frameBorder="0" src="/take/{{form.id}}/{{(form.questions[0]).id}}" width="1000" height="500"></iframe>
   </div>
-  <div class="row s10 center"><br><br><br>
+
+  <div class="row s10 center"><br>
       <a id="prev" style="visibility: hidden" class="btn waves-effect waves-light cyan">PREVIOUS</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a id="next" class="btn waves-effect waves-light cyan">&nbsp;&nbsp;&nbsp;&nbsp;NEXT&nbsp;&nbsp;&nbsp;&nbsp;</a>
+      {% if form.questions|length > 1 %}
+      <a id="next_button" onclick="iframe_submit();" class="btn waves-effect waves-light cyan">&nbsp;&nbsp;&nbsp;&nbsp;NEXT&nbsp;&nbsp;&nbsp;&nbsp;</a>
+      <button id="next" style="visibility: hidden" class="btn waves-effect waves-light cyan">NEXT</button>
+      {% endif %}
   </div>
 
-  <div class="row s10 right">
-    <br><br><br>
-    <a class="btn-large waves-effect waves-light cyan" href="/dash">SUBMIT</a>
+  <div class="row s10 center">
+    {% if form.questions|length > 1 %}
+    <a id="submit" style="visibility: hidden" onclick="iframe_submit();" class="btn waves-effect waves-light cyan">&nbsp;&nbsp;&nbsp;SUBMIT&nbsp;&nbsp;&nbsp;</a>
+    {% else %}
+    <a id="submit" onclick="iframe_submit();" class="btn waves-effect waves-light cyan">SUBMIT</a>
+    {% endif %}
   </div>
 
   <div class="row s10" style="visibility: hidden">
@@ -56,7 +60,6 @@
   </div>
 
 </div>
-
 
 {% else %}
   <script>
@@ -82,10 +85,11 @@
         $('#iframe').prop('src', window.location.origin.toString() + '/take/{{form.id}}/' + ($('#questions :selected').val()).toString())
         var sel = parseInt($('#questions :selected').text());
         if(sel == {{form.questions|length}}) {
-          $("#next").css("visibility", "hidden");
+          $("#next_button").css("visibility", "hidden");
+          $("#submit").css("visibility", "visible");
         } else {
           $("#prev").css("visibility", "visible");
-          $("#next").css("visibility", "visible");
+          $("#next_button").css("visibility", "visible");
         }
       }
     });
@@ -101,10 +105,14 @@
           $("#prev").css("visibility", "hidden");
         } else {
           $("#prev").css("visibility", "visible");
-          $("#next").css("visibility", "visible");
+          $("#next_button").css("visibility", "visible");
         }
       }
     });
+
+    function iframe_submit(){
+      $('#iframe').contents().find('#submit').trigger("click");
+    };
   </script>
 </footer>
 </body>
