--- a/templates/take/base.html
+++ b/templates/take/base.html
@@ -1,3 +1,13 @@
+{% if isPOST and questionNumber != questions%}
+<script>
+  window.parent.$('#next').trigger('click');
+</script>
+{% elif isPOST and questionNumber == questions%}
+<script>
+  parent.location.href = "/view/{{question.form.id}}/{{user.id}}"
+</script>
+{% endif %}
+
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
@@ -13,14 +23,28 @@
 
   <script type="text/javascript">
       if (parent.location==location) {
-          location.href = "/dash"
+          location.href = "/take/{{question.form.id}}"
       }
   </script>
 
-  <h5>QUESTION #{{questions+1}}</h5>
+  <h4>QUESTION #{{questionNumber}}</h4>
   <div class="col s1"><br><br></div>
 
   <div class="row">
+    <div class="row s12">
+      <div class="col s9">
+        <h5 class="grey-text center">{{question.question.upper()}}</h5>
+      </div>
+      {% if isTest %}
+        <div class="col s3">
+          {% if question.points == 1 %}
+          <h5 class="grey-text center">1 POINT </h5>
+          {% else %}
+          <h5 class="grey-text center">{{question.points}} POINTS</h5>
+          {% endif %}
+        </div>
+      {% endif %}
+    </div>
     <form class="col s12" id="form" name="form" method="POST">
 
       {% block content %}
@@ -29,9 +53,7 @@
     </form>
   </div>
 
-  <p class="right">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-  <button class="btn waves-effect waves-light cyan right" type="submit" name="action" form="form">ADD QUESTION</button>
-
+  <button id="submit" style="visibility: hidden" class="btn waves-effect waves-light cyan right" type="submit" name="action" form="form">SUBMIT</button>
 
 <footer>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
