--- a/templates/take/shortAnswer.html
+++ b/templates/take/shortAnswer.html
@@ -1,1 +1,17 @@
+{% extends 'take/base.html' %}
+{% block content %}
 
+<div class="row s10">
+  <div class="col s1"><br><br></div>
+  <div class="input-field col s8">
+    {% if answer %}
+      <input id="response" name="response" type="text" class="validate" value="{{answer}}" required>
+    {% else %}
+      <input id="response" name="response" type="text" class="validate" value="" required>
+    {% endif %}
+    <label for="question" data-error="wrong" data-success="right">  SHORT ANSWER</label>
+  </div>
+</div>
+
+
+{% endblock %}
